--- a/APP_FILMS_164/templates/base.html
+++ b/APP_FILMS_164/templates/base.html
@@ -46,7 +46,7 @@
 				<ul class="navbar-nav">
 					<li class="nav-item">
 						<!--		Afficher la liste des genres dans l'ordre (ASC) et tous les genres (0)-->
-						<a class="nav-link" href="{{ url_for('genres_afficher', order_by='ASC', id_genre_sel=0) }}">Mail</a>
+						<a class="nav-link" href="{{ url_for('genres_afficher', order_by='ASC', IDEntrepot_sel=0) }}">Entrepôt</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navdropdownfilms" role="button"
@@ -57,6 +57,7 @@
 							<li><a class="nav-link" href="{{ url_for('films_genres_afficher', id_film_sel=0) }}">Films</a>
 							</li>
 							<li><a class="nav-link" href="{{ url_for('films_genres_afficher', id_film_sel=0) }}">Films/Mail</a></li>
+							<li><a class="nav-link" href="{{ url_for('films_genres_afficher', id_film_sel=0) }}">oui</a></li>
 						</ul>
 					</li>
 
