--- a/APP_FILMS_164/templates/films/film_delete_wtf.html
+++ b/APP_FILMS_164/templates/films/film_delete_wtf.html
@@ -36,19 +36,13 @@
 				<tbody>
 				<tr>
 					<th class="align-middle">
-						{{ row.id_film }}
+						{{ row.IDPro }}
 					</th>
 					<th class="align-middle">
-						{{ row.nom_film }}
-					</th>
-					<th class="align-middle">
-						{{ row.duree_film|default("", True) }}
+						{{ row.ProNom }}
 					</th>
 					<th class="align-middle">
 						{{ row.date_sortie_film|default("", True) }}
-					</th>
-					<th class="align-middle">
-						{{ row.description_film|default("", True) }}
 					</th>
 					<th class="align-middle">
 						<img class="img" src={{ row.cover_link_film|default(None, True) }}
