--- a/APP_FILMS_164/templates/films_genres/films_genres_afficher.html
+++ b/APP_FILMS_164/templates/films_genres/films_genres_afficher.html
@@ -14,16 +14,22 @@
 						  Nom
 						</th>
 						<th class="" >
-						  Durée
+						  Prix Suisse
 						</th>
 						<th class="" >
-						  Date de sortie
+						  Prix France
 						</th>
 						<th class="" >
 						  Description
 						</th>
 						<th class="" >
 						  Affiche
+						</th>
+						<th class="" >
+
+						</th>
+						<th class="" >
+
 						</th>
 					</tr>
 				</thead>
@@ -32,19 +38,16 @@
 			<tbody>
 				<tr>
 					  <th class="align-middle">
-						  {{ row.id_film }}
+						  {{ row.IDPro }}
 					  </th>
 					  <th class="align-middle">
-						{{ row.nom_film }}
+						{{ row.ProNom }}
 					  </th>
 					  <th class="align-middle">
-						{{ row.duree_film|default("", True) }}
+						{{ row.ProPrixCH }}
 					  </th>
 					  <th class="align-middle">
-						{{ row.date_sortie_film|default("", True) }}
-					  </th>
-					  <th class="align-middle">
-						{{ row.description_film|default("", True) }}
+						{{ row.ProPrixFR|default("", True) }}
 					  </th>
 					  <th class="align-middle">
 						<img class="img" src={{ row.cover_link_film|default(None, True) }} style="border: 0;display:block; width:150px; max-height:auto;"  alt = "image masquée FFP8 (in COVID-19 Memory) (absente) mod 164">
@@ -53,17 +56,20 @@
 						<a class="btn btn-primary" href="{{ url_for('film_add_wtf') }}" role="button">Ajouter</a>
 					  </th>
 					  <th class="align-middle">
-						<a class="btn btn-warning" href="{{ url_for('film_update_wtf', id_film_btn_edit_html=row.id_film) }}" role="button">Edit</a>
+						<a class="btn btn-warning" href="{{ url_for('film_update_wtf', id_film_btn_edit_html=row.IDPro) }}" role="button">Edit</a>
 					  </th>
 					  <th class="align-middle">
-						<a class="btn btn-danger" href="{{ url_for('film_delete_wtf', id_film_btn_delete_html=row.id_film ) }}" role="button">Delete</a>
+						<a class="btn btn-danger" href="{{ url_for('film_delete_wtf', id_film_btn_delete_html=row.IDPro ) }}" role="button">Delete</a>
 					  </th>
 					<tr>
 						<td class="align-middle">
-							<a class="btn btn-warning" href="{{ url_for('edit_genre_film_selected', id_film_genres_edit_html=row.id_film) }}" role="button">Modifier</a>
+							<a class="btn btn-warning" href="{{ url_for('edit_entrepot_film_selected', id_film_genres_edit_html=row.IDPro) }}" role="button">Modifier</a>
 						</td>
 						<td class="align-middle" colspan="5">
 							{{ row.GenresFilms|default("PAS DE GENRES", True) }}
+						</td>
+						<td class="align-middle" colspan="5">
+							{{ row.GenresFilms|default("", True) }}
 						</td>
 					</tr>
 				</tr>
