--- a/APP_FILMS_164/templates/base.html
+++ b/APP_FILMS_164/templates/base.html
@@ -38,7 +38,11 @@
 <div class="container">
 	<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-secondary">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="{{ url_for('mapageprincipale') }}">BeProt</a>
+<a class="navbar-brand" href="{{ url_for('mapageprincipale') }}">
+  <img src="logo.png" alt="Logo de BeProt">
+</a>
+
+
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -46,7 +50,7 @@
 				<ul class="navbar-nav">
 					<li class="nav-item">
 						<!--		Afficher la liste des genres dans l'ordre (ASC) et tous les genres (0)-->
-						<a class="nav-link" href="{{ url_for('genres_afficher', order_by='ASC', IDEntrepot_sel=0) }}">Entrepôt</a>
+						<a class="nav-link" href="{{ url_for('entrepot_afficher', order_by='ASC', IDEntrepot_sel=0) }}">Entrepôt</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navdropdownfilms" role="button"
