--- a/APP_FILMS_164/templates/entrepot/entrepot_afficher.html
+++ b/APP_FILMS_164/templates/entrepot/entrepot_afficher.html
@@ -53,13 +53,13 @@
 
 						</td>
 						<td class="text-center" class="align-middle">
-							<a class="btn btn-primary" href="{{ url_for('genres_ajouter_wtf') }}" role="button">Ajouter</a>
+							<a class="btn btn-primary" href="{{ url_for('entrepot_ajouter_wtf') }}" role="button">Ajouter</a>
 						</td>
 						<td class="text-center" class="align-middle">
-							<a class="btn btn-warning" href="{{ url_for('genre_update_wtf', IDEntrepot_btn_edit_html=row.IDEntrepot) }}" role="button">Edit</a>
+							<a class="btn btn-warning" href="{{ url_for('entrepot_update_wtf', IDEntrepot_btn_edit_html=row.IDEntrepot) }}" role="button">Edit</a>
 						</td>
 						<td class="text-center" class="align-middle">
-							<a class="btn btn-danger" href="{{ url_for('genre_delete_wtf', IDEntrepot_btn_delete_html=row.IDEntrepot) }}" role="button">Delete</a>
+							<a class="btn btn-danger" href="{{ url_for('entrepot_delete_wtf', IDEntrepot_btn_delete_html=row.IDEntrepot) }}" role="button">Delete</a>
 						</td>
 					</tr>
 				</tbody>
@@ -70,7 +70,7 @@
 							Aucun genre.
 						</td>
 						<td>
-							<a class="btn btn-primary" href="{{ url_for('genres_ajouter_wtf') }}" role="button">Ajouter</a>
+							<a class="btn btn-primary" href="{{ url_for('entrepot_ajouter_wtf') }}" role="button">Ajouter</a>
 						</td>
 					</tr>
 				</tbody>
