Mon premier Commit

--- a/APP_FILMS_164/templates/entrepot/entrepot_afficher.html
+++ b/APP_FILMS_164/templates/entrepot/entrepot_afficher.html
@@ -15,7 +15,7 @@
                             ID
                         </th>
                         <th class="align-middle">
-                            IDLoo
+                            IDLo
                         </th>
                         <th class="align-middle">
 							Nom
