--- a/APP_FILMS_164/templates/entrepot/entrepot_ajouter_wtf.html
+++ b/APP_FILMS_164/templates/entrepot/entrepot_ajouter_wtf.html
@@ -5,7 +5,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<p>
-				Ajouter un nouvelle Entrepôt (WTForms)
+				Ajouter un nouvelle Entrepôt o(WTForms)
 			</p>
 			<form action="" method="POST" novalidate>
 				<!-- Protection contre les attaques Cross-Site Request Forgery (CSRF) -->
