--- a/APP_FILMS_164/templates/base.html
+++ b/APP_FILMS_164/templates/base.html
@@ -52,6 +52,10 @@
 						<!--		Afficher la liste des genres dans l'ordre (ASC) et tous les genres (0)-->
 						<a class="nav-link" href="{{ url_for('entrepot_afficher', order_by='ASC', IDEntrepot_sel=0) }}">Entrepôt</a>
 					</li>
+					<li class="nav-item">
+						<!--		Afficher la liste des genres dans l'ordre (ASC) et tous les genres (0)-->
+						<a class="nav-link" href="{{ url_for('entrepot_afficher', order_by='ASC', IDEntrepot_sel=0) }}">Entrepôt</a>
+					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navdropdownfilms" role="button"
 						   data-bs-toggle="dropdown" aria-expanded="false">
