--- a/APP_FILMS_164/templates/categorie/categorie_ajouter_wtf.html
+++ b/APP_FILMS_164/templates/categorie/categorie_ajouter_wtf.html
@@ -1,32 +1,32 @@
 {% extends "base.html" %}
-{% block title %} Editer un GENRE (WTF) {% endblock %}
+{% block title %} Ajouter un GENRE (WTF) {% endblock %}
 {% block body %}
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
 			<p>
-				Editer un GENRE
+				Ajouter un nouvelle Categorie o(WTForms)
 			</p>
 			<form action="" method="POST" novalidate>
 				<!-- Protection contre les attaques Cross-Site Request Forgery (CSRF) -->
-				{{ form_update.hidden_tag() }}
+				{{ form.hidden_tag() }}
 				<div class="form-group">
 					<p>
-						{{ form_update.EntrepotNom_wtf.label }}<br>
-						{{ form_update.EntrepotNom_wtf(size=32) }}<br>
-						{% for error in form_update.EntrepotNom_wtf.errors %}
+						{{ form.IDCate_wtf.label }}<br>
+						{{ form.IDCate_wtf(size=32) }}<br>
+						{% for error in form.IDCate_wtf.errors %}
 							<span style="color: red;">[{{ error }}]</span>
 						{% endfor %}
 					</p>
 					<p>
-						{{ form_update.nom_Adresse_update_wtf.label }}<br>
-						{{ form_update.nom_Adresse_update_wtf(size=32) }}<br>
-						{% for error in form_update.nom_Adresse_update_wtf.errors %}
+						{{ form.CateNom_wtf.label }}<br>
+						{{ form.CateNom_wtf(size=32) }}<br>
+						{% for error in form.CateNom_wtf.errors %}
 							<span style="color: red;">[{{ error }}]</span>
 						{% endfor %}
 					</p>
 				</div>
-				{{ form_update.submit(class="btn btn-primary") }}
+				{{ form.submit(class="btn btn-primary") }}
 			</form>
 		</div>
 	</div>
