--- a/APP_FILMS_164/templates/entrepot/entrepot_afficher.html
+++ b/APP_FILMS_164/templates/entrepot/entrepot_afficher.html
@@ -67,7 +67,7 @@
 				<tbody>
 					<tr>
 						<td>
-							Aucun genre.
+							Aucun Entrepôt.
 						</td>
 						<td>
 							<a class="btn btn-primary" href="{{ url_for('entrepot_ajouter_wtf') }}" role="button">Ajouter</a>
