--- a/APP_FILMS_164/templates/films_genres/films_genres_afficher.html
+++ b/APP_FILMS_164/templates/films_genres/films_genres_afficher.html
@@ -20,10 +20,10 @@
 						  Prix France
 						</th>
 						<th class="" >
-						  Description
+						  Quantité en stock
 						</th>
 						<th class="" >
-						  Affiche
+
 						</th>
 						<th class="" >
 
@@ -47,10 +47,10 @@
 						{{ row.ProPrixCH }}
 					  </th>
 					  <th class="align-middle">
-						{{ row.ProPrixFR|default("", True) }}
+						{{ row.ProPrixFR }}
 					  </th>
 					  <th class="align-middle">
-						<img class="img" src={{ row.cover_link_film|default(None, True) }} style="border: 0;display:block; width:150px; max-height:auto;"  alt = "image masquée FFP8 (in COVID-19 Memory) (absente) mod 164">
+						{{ row.ProEntrepotQuantité }}
 					  </th>
 					  <th class="align-middle">
 						<a class="btn btn-primary" href="{{ url_for('film_add_wtf') }}" role="button">Ajouter</a>
