--- a/APP_FILMS_164/templates/home.html
+++ b/APP_FILMS_164/templates/home.html
@@ -5,17 +5,28 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h3>
-				Démo complète du 2023.03.25
+				Bienvenu sur la base de données de BeProt<br>
 			</h3>
-			<h3>
-				CRUD sur 3 tables autour des films et leurs genres associés<br>
-			</h3>
+			<h6>
+				Cette base de données regroupe :
+			</h6>
 			<ul>
 				<li class="list-item">
-					Lire le readme.md
+    			<a href="http://127.0.0.1:5005/films_genres_afficher/0">Les Produits</a>
 				</li>
-			</ul>
-		</div>
+				<li class="list-item">
+				<a href="http://127.0.0.1:5005/entrepot_afficher/ASC/0">Les Entrepôt</a>
+				</li>
+				<li class="list-item">
+				<a href="http://127.0.0.1:5005/categorie_afficher/ASC/0">Les Categories</a>
+				</li>
+				<br>
+                <br>
+            </ul>
+        </div>
+		<li class="list-item">
+					Lire le readme.md
+		</li>
 	</div>
 </div>
 {% endblock %}
